# learning_rust

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
advanced_features/advanced/src/: main.rs
advanced_features/advanced_traits/src/: main.rs
advanced_features/advanced_types/src/: main.rs
advanced_features/functions_closures/: Cargo.toml
advanced_features/functions_closures/src/: main.rs
advanced_features/macros/: Cargo.toml
advanced_features/macros/hello_macro_derive/: Cargo.toml
advanced_features/macros/hello_macro_derive/src/: lib.rs
advanced_features/macros/src/: main.rs
advanced_features/unsafe/: Cargo.toml
advanced_features/unsafe/src/: main.rs
collections/std_collections/: Cargo.toml
collections/std_collections/src/: main.rs
concurrency_parallelism/: CONCURRENCY_IS_NOT_PARALLELISM
concurrency_parallelism/concurrency/src/: main.rs
error_handling/errors/src/: main.rs
generics_traits_lifetimes/gtl/: Cargo.toml
generics_traits_lifetimes/gtl/src/: lib.rs  main.rs
initial concepts/control_flow/src/: main.rs
initial_concepts/control_flow/src/: main.rs
initial_concepts/functions/src/: main.rs
initial_concepts/guessing_game/src/: main.rs
initial_concepts/variables/: Cargo.toml
initial_concepts/variables/src/: data_types.rs  main.rs
organizing_code/backyard/: Cargo.toml
organizing_code/cratesio_libraries/: Cargo.toml
organizing_code/packages_crates_modules/: Cargo.toml
projects/minigrep_iter/: Cargo.toml
projects/multithreaded_webserver/: Cargo.toml
projects/webserver/: Cargo.toml  index.html
(+37 files in other folders)
